--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Bree+Serif&family=Outfit:wght@300&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./CSS/desktop_design.css">
-  <link rel="stylesheet" media="screen and (min-width:375px) and (max-width:1440px)" href="./CSS/mobile_design.css">
+  <link rel="stylesheet" href="./desktop_design.css">
+  <link rel="stylesheet" media="screen and (min-width:375px) and (max-width:1440px)" href="./mobile_design.css">
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
 
@@ -19,9 +19,9 @@
   <main id="NFT">
 
     <div class="equil">
-      <img src="./images/image-equilibrium.jpg" alt="image-equilibrium">
+      <img src="./image-equilibrium.jpg" alt="image-equilibrium">
       <div id="overlay" class="overlay">
-        <img src="./images/icon-view.svg" id="icon" class="icon" alt="icon">
+        <img src="./icon-view.svg" id="icon" class="icon" alt="icon">
       </div>
     </div>
 
@@ -30,19 +30,19 @@
     <p class="edit1 font">Our Equilibrium collection promotes balance and calm.</p>
 
     <span class="ethereum edit1">
-      <img src="./images/icon-ethereum.svg" alt="icon-ethereum">
+      <img src="./icon-ethereum.svg" alt="icon-ethereum">
       <span class="first edit3 font">0.041 ETH</span>
     </span>
 
     <span class="clock edit2">
-      <img src="./images/icon-clock.svg" alt="icon-clock">
+      <img src="./icon-clock.svg" alt="icon-clock">
       <span class="second edit3 font">3 days left</span>
     </span>
     
     <div class="line"></div>
 
     <div class="avatar edit5">
-      <img src="./images/image-avatar.png" alt="image-avatar">
+      <img src="./image-avatar.png" alt="image-avatar">
       <span class="third edit4 font">Creation of</span>
       <span class="fourth edit6 font hover">Jules Wyvern</span>
     </div>
